# fbapp-rs

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  Rocket.toml  build.rs  package.json  tsconfig.json  tslint.json
fbapp/: Cargo.toml
fbapp-client/: README.md  index.html  package.json
fbapp-client/config/: dev.env.js  index.js  prod.env.js  test.env.js
fbapp-client/src/: App.vue  main.ts
fbapp-client/src/components/: HelloWorld.vue
fbapp-client/src/router/: index.ts
fbapp-client/test/e2e/: nightwatch.conf.js  runner.js
fbapp-client/test/e2e/custom-assertions/: elementCount.js
fbapp-client/test/e2e/reports/: CHROME_61.0.3163.100_Linux_test.xml
fbapp-client/test/e2e/specs/: test.js
fbapp-client/test/unit/: karma.conf.js
fbapp-client/test/unit/coverage/: lcov.info
fbapp-client/test/unit/coverage/lcov-report/: index.html
fbapp-client/test/unit/coverage/lcov-report/src/: App.vue.html  index.html  main.ts.html
fbapp-client/test/unit/coverage/lcov-report/src/components/: index.html  (+1 more)
fbapp-client/test/unit/specs/: Hello.spec.js
fbapp-elm/: package.json  webpack.config.js
fbapp-elm/src/: Main.elm  index.html  index.js
fbapp-elm/src/App/: State.elm  Types.elm  View.elm
fbapp-elm/src/Home/: Rest.elm  State.elm  Types.elm  View.elm
fbapp/src/: lib.rs  main.rs
fbapp/src/api/: home.rs  mod.rs
fbapp/src/framework/: domain.rs  event_store.rs
fbapp/static/: index.html
migrations/2018-01-09-114109_create_events/: up.sql
src/: lib.rs  main.rs
src-elm/: Main.elm
src/api/: auth.rs  cors.rs  home.rs  mod.rs  server.rs
src/event_store/: models.rs  persistance.rs
src/framework/: event_store.rs  mod.rs
web/: .babelrc  .eslintrc.js  package.json  quasar.conf.js
web/src/: App.vue  index.template.html
web/src/components/: site-toolbar.vue
web/src/layouts/: dashboard.vue  default.vue
web/src/pages/: 404.vue  index.vue
web/src/pages/dashboard/: competitions.vue
web/src/plugins/: axios.js
web/src/router/: index.js  routes.js
web/src/store/: index.js
(+6 files in other folders)
