[package]
name = "fbapp"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "serde_json", "uuid"] }
dotenv = "0.9.0"
futures = "0.1.17"
rocket = "0.3.5"
rocket_codegen = "0.3.5"
serde = "1.0.27"
serde_json = "1.0.9"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
clippy = { version = "0.0.178", optional = true }

[features]
default = []
