[package]
name = "fbapp"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres", "serde_json", "uuid"] }
dotenv = "0.11.0"
futures = "0.2.1"
rocket = "0.3.10"
rocket_codegen = "0.3.10"
serde = "1.0.52"
serde_json = "1.0.17"
uuid = { version = "0.6.3", features = ["serde", "v4"] }
clippy = { version = "0.0.197", optional = true }

[features]
default = []
