[package]
name = "fbapp"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]

[dependencies]
diesel = { version = "1.2.2", features = ["postgres", "serde_json", "uuid"] }
dotenv = "0.11.0"
futures = "0.2.1"
reqwest = "0.8.5"
rocket = { version = "0.3.10", features = ["tls"] }
rocket_codegen = "0.3.10"
rocket_contrib = "0.3.10"
serde = "1.0.52"
serde_derive = "1.0.54"
serde_json = "1.0.17"
uuid = { version = "0.6.3", features = ["serde", "v4"] }

[features]
default = []
