[package]
name = "fbapp"
version = "0.1.0"
authors = ["Janno Põldma <janno.poldma@gmail.com>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres", "serde_json", "uuid"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
futures = "0.1.16"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0.15"
serde_json = "1.0.4"
uuid = { version = "0.5.1", features = ["serde", "v4"] }
clippy = { version = "0.0.166", optional = true }

[features]
default = []
